# pwc-advertising-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  locations_test.csv  pyproject.toml
frontend-react/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend-react/src/: App.tsx  Routes.tsx  index.css  main.tsx  types.ts
frontend-react/src/components/Billboards/: BillboardsNew.tsx  BillboardsNewEdit.tsx  BillboardsTable.tsx
frontend-react/src/components/Campaigns/: CampaignsNew.tsx  CampaignsNewEdit.tsx  CampaignsTable.tsx
frontend-react/src/components/Locations/: LocationsNew.tsx  LocationsNewEdit.tsx  LocationsTable.tsx
frontend-react/src/components/NavBar/: NavBar.tsx
frontend-react/src/components/common/: ItemsMap.tsx  Loader.tsx
frontend-react/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend-react/src/views/: BillboardsView.tsx  CampaignBillboardsView.tsx  CampaignsView.tsx  LocationsView.tsx  SigninView.tsx  SignupView.tsx
migrations/: env.py
migrations/versions/: cee3426cdd74_initial_schema.py
src/: dependencies.py  error_handlers.py  main.py  middleware.py
src/domain/: models.py
src/domain/models/: auth.py  billboards.py  campaigns.py  common.py  locations.py
src/persistence/: models.py  repositories.py
src/routes/: auth.py  availability.py  billboards.py  campaigns.py  locations.py
src/services/: auth.py  billboards.py  campaign_billboards.py  campaigns.py  locations.py
src/utils/: uuid.py
tests/: test_locations.py
